# catastrophic-lang

./: .gitignore  .rustfmt.toml  Cargo.toml  badfib.cat  fib.cat  hello.cat  justfile  random.cat  simple.cat  test.cat  test_fib.cat
.github/workflows/: coverage.yml  run-tests.yml
analyser/: Cargo.toml
analyser/src/: error.rs  instr.rs  lib.rs
ast/: Cargo.toml
ast/src/: lib.rs
catastrophic/: Cargo.toml
catastrophic/src/: lib.rs  span.rs
catastrophic/src/analyser/: error.rs  ir.rs  mod.rs  state.rs
catastrophic/src/lexer/: error.rs  mod.rs  reader.rs  state.rs  token.rs
catastrophic/src/parser/: ast.rs  error.rs  mod.rs  state.rs
catastrophicc/: Cargo.toml
catastrophicc/src/: main.rs
catastrophicc/src/args/: flags.rs  mod.rs
catastrophici/: Cargo.toml
catastrophici/src/: main.rs
examples/: calculator.cat  fibonacci.cat
integration_tests/: Cargo.toml
integration_tests/test_cases/closure_list/: input.cat
integration_tests/test_cases/closure_simple/: input.cat
integration_tests/test_cases/error_duplicate_symbol/: input.cat  stderr.txt
integration_tests/test_cases/error_missing_arrow/: input.cat  stderr.txt
integration_tests/test_cases/error_undefined_symbol/: input.cat  stderr.txt
integration_tests/test_cases/error_unexpected_char/: input.cat  stderr.txt
integration_tests/test_cases/error_unmatched_close_brace/: input.cat  stderr.txt
integration_tests/test_cases/error_unmatched_open_brace/: input.cat  stderr.txt
integration_tests/test_cases/error_unterminated_string/: input.cat  stderr.txt
integration_tests/test_cases/fib_divergent/: input.cat
integration_tests/test_cases/fib_tail_recursive/: input.cat
integration_tests/test_cases/input_loop/: input.cat
integration_tests/test_cases/input_string/: input.cat  output.txt  stdin.txt
integration_tests/test_cases/ite_equality/: input.cat
integration_tests/test_cases/ite_greater_than/: input.cat
integration_tests/test_cases/ite_inequality/: input.cat
integration_tests/test_cases/ite_less_than/: input.cat
integration_tests/test_cases/ite_not_greater_than/: input.cat
integration_tests/test_cases/ite_not_less_than/: input.cat
integration_tests/test_cases/nested_symbol_names/: input.cat
integration_tests/test_cases/parser/: input.cat
integration_tests/test_cases/simple_addition/: input.cat
integration_tests/test_cases/simple_division/: input.cat
integration_tests/test_cases/simple_inequality/: input.cat
integration_tests/test_cases/simple_multiplication/: input.cat
integration_tests/test_cases/simple_subtraction/: input.cat
integration_tests/test_cases/string_emoji/: input.cat  output.txt
integration_tests/test_cases/string_simple/: input.cat
integration_tests/tests/: compiler.rs  does_this_work.rs  integration_tests.rs  interpreter.rs  optimizer.rs
integration_tests/tests/common/: mod.rs
libs/analyser/: Cargo.toml
libs/analyser/src/: lib.rs  stage.rs
libs/analyser/src/analyser/: error.rs  mod.rs  state.rs  test.rs
libs/ast/: Cargo.toml
libs/ast/src/: ast.rs  lib.rs  pretty.rs  token.rs
libs/compiler/: Cargo.toml
libs/compiler/src/: lib.rs  stage.rs
libs/compiler/src/compiler/: mod.rs  state.rs
libs/core/: Cargo.toml
libs/core/src/: defines.rs  lib.rs  pretty.rs  profiling.rs  stage.rs
libs/core/src/error/: context.rs  writer.rs
libs/error/: Cargo.toml
libs/error/src/: context.rs  writer.rs
libs/hir/: Cargo.toml
libs/hir-optimizer/: Cargo.toml
libs/hir-optimizer/src/: lib.rs  stage.rs
libs/hir-optimizer/src/optimizer/: context.rs  convert.rs  mod.rs
libs/hir-optimizer/src/optimizer/pass/: immediate_calls.rs  immediate_conditional_calls.rs  immediate_operations.rs  mod.rs
libs/hir/src/: hir.rs  lib.rs  pretty.rs
libs/interpreter/: Cargo.toml
libs/interpreter/src/: lib.rs  stage.rs
libs/interpreter/src/interpreter/: error.rs  mod.rs  state.rs
libs/ir/: Cargo.toml
libs/ir/src/: ir.rs  lib.rs
libs/llvm/: Cargo.toml
libs/llvm/src/: lib.rs
libs/mir/: Cargo.toml
libs/mir/src/: lib.rs  mir.rs  pretty.rs
libs/output/: Cargo.toml
libs/output/src/: error.rs  lib.rs  stage.rs
libs/parser/: Cargo.toml
libs/parser/src/: lib.rs  stage.rs
libs/parser/src/lexer/: error.rs  mod.rs  reader.rs  state.rs  test.rs
libs/parser/src/parser/: error.rs  mod.rs  output.rs  state.rs  test.rs
libs/span/: Cargo.toml
parser/: Cargo.toml
parser/src/: ast.rs  error.rs  grammar.lalrpop  lib.rs
src/: main.rs
