[workspace]
resolver = "2"
members = [
    "libs/core", 
    "libs/parser", 
    "libs/ast", 
    "libs/analyser", 
    "libs/hir", 
    "libs/interpreter", 
    "libs/hir-optimizer", 
    "libs/mir", 
    "libs/compiler",

    "catastrophici",
    "catastrophicc",

    "integration_tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
catastrophic-core = { path = "libs/core" }
catastrophic-parser = { path = "libs/parser" }
catastrophic-ast = { path = "libs/ast" }
catastrophic-analyser = { path = "libs/analyser" }
catastrophic-hir = { path = "libs/hir" }
catastrophic-interpreter = { path = "libs/interpreter" }
catastrophic-hir-optimizer = { path = "libs/hir-optimizer" }
catastrophic-mir = { path = "libs/mir" }
catastrophic-compiler = { path = "libs/compiler" }

ruinous = { git = "https://github.com/samuelsleight/ruinous" }
ruinous-util = { git = "https://github.com/samuelsleight/ruinous" }

anyhow = "1.0.65"
bintest = { git = "https://github.com/cehteh/bintest", branch = "devel" }
clap = { version="4.1.4", features=["derive"] }
dragon-tamer = { git = "https://github.com/samuelsleight/dragon-tamer" }
once_cell = "1.19.0"
paste = "1.0.11"
pipeline = { git = "https://github.com/samuelsleight/pipelines" }
rand = "0.8.5"
unic-emoji = { git = "https://github.com/eyeplum/rust-unic/", branch = "develop" }
