[workspace]
resolver = "2"
members = [
    "libs/core", 
    "libs/parser", 
    "libs/ast", 
    "libs/analyser", 
    "libs/hir", 
    "libs/interpreter", 
    "libs/hir-optimizer", 
    "libs/mir", 
    "libs/compiler",

    "catastrophici",
    "catastrophicc",

    "integration_tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.clippy]
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "warn"
pedantic = "warn"
style = "warn"

# TODO
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
catastrophic-core = { path = "libs/core" }
catastrophic-parser = { path = "libs/parser" }
catastrophic-ast = { path = "libs/ast" }
catastrophic-analyser = { path = "libs/analyser" }
catastrophic-hir = { path = "libs/hir" }
catastrophic-interpreter = { path = "libs/interpreter" }
catastrophic-hir-optimizer = { path = "libs/hir-optimizer" }
catastrophic-mir = { path = "libs/mir" }
catastrophic-compiler = { path = "libs/compiler" }

ruinous = { git = "https://github.com/samuelsleight/ruinous" }
ruinous-util = { git = "https://github.com/samuelsleight/ruinous" }

anyhow = "1.0.65"
bintest = "2.0.0"
clap = { version="4.1.4", features=["derive"] }
dragon-tamer = { git = "https://github.com/samuelsleight/dragon-tamer" }
icu_properties = "1.4.0"
once_cell = "1.19.0"
paste = "1.0.11"
pipeline = { git = "https://github.com/samuelsleight/pipelines" }
rand = "0.8.5"
