[package]
name = "catastrophicc"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
paw.workspace = true
structopt.workspace = true
catastrophic-core.workspace = true
catastrophic-parser.workspace = true
catastrophic-analyser.workspace = true
catastrophic-hir-optimizer.workspace = true
catastrophic-compiler.workspace = true