[package]
name = "catastrophici"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
catastrophic-core.workspace = true
catastrophic-parser.workspace = true
catastrophic-analyser.workspace = true
catastrophic-interpreter.workspace = true